Fixed #9988, scrollbars were hidden in popup.

--- a/css/annotations/popup.scss
+++ b/css/annotations/popup.scss
@@ -31,6 +31,7 @@ $button-hover-color: #e6ebf5;
   display: none;
   font-size: 0.876em;
   max-height: 90%;
+  height: 90%;
   top: 5%;
   left: 15%;
   width: 75%;
